--- a/src/scss/Boards.module.scss
+++ b/src/scss/Boards.module.scss
@@ -2,15 +2,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-
-.titleContainer h1 {
-    padding-left: 40px;
-}
-
-.titleContainer button {
-    width: 20%;
-    justify-self: end;
+    h1 {
+        padding-left: 40px;
+    }
+    button {
+        width: 20%;
+        justify-self: end;
+    }
 }
 
 .card {
@@ -18,15 +16,16 @@
     border-radius: 12px;
     padding: 0 24px 24px 36px;
     margin: 12px 0;
-}
-
-.card h2 {
-    cursor: pointer;
-    color: darkslategray;
-}
-
-.card .textMuted {
-    color: #a5a5a5;
+    h2 {
+        cursor: pointer;
+        color: darkslategray;
+    }
+    .textMuted {
+        color: #a5a5a5;
+    }
+    .description {
+        white-space: pre-wrap;
+    }
 }
 
 .listInit {
