axios 전역 에러처리 기능 및 회원가입 아바타 이미지 마크업

--- a/src/scss/Login.module.scss
+++ b/src/scss/Login.module.scss
@@ -1,3 +1,13 @@
 .loginContainer {
     padding: 60px;
+    .loginBtn {
+        padding: 0.5rem 2rem;
+        margin-top: 16px;
+        background-color: #51557E;
+        border: none;
+    }
+    .loginLink {
+        margin-top: 16px;
+        color: #51557E;
+    }
 }
