--- a/src/scss/Boards.module.scss
+++ b/src/scss/Boards.module.scss
@@ -1,44 +1,46 @@
-.titleContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    h1 {
-        padding-left: 40px;
+.boardContainer {
+    padding: 60px;
+    .titleSection {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        h1 {
+            margin: 0;
+        }
+        .writeButton {
+            border: none;
+            padding: 0.5rem 2rem;
+        }
     }
-    button {
-        width: 20%;
-        justify-self: end;
+    .listInit {
+        list-style: none;
+        padding-left: 0;
+        .card {
+            border: solid 1px #d6d6d6;
+            border-radius: 12px;
+            padding: 0 24px 24px 36px;
+            margin: 12px 0;
+            h2 {
+                cursor: pointer;
+                color: darkslategray;
+            }
+            .textMuted {
+                color: #a5a5a5;
+            }
+            .description {
+                overflow: hidden;
+                white-space: pre-wrap;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                word-break: keep-all;   // 문단으로 끊어져서 줄바꿈 됨
+            }
+            .deleteBtn {
+                background-color: tomato;
+                border: none;
+                padding: 0.5rem 2rem;
+            }
+        }
     }
-}
-
-.card {
-    border: solid 1px #d6d6d6;
-    border-radius: 12px;
-    padding: 0 24px 24px 36px;
-    margin: 12px 0;
-    h2 {
-        cursor: pointer;
-        color: darkslategray;
-    }
-    .textMuted {
-        color: #a5a5a5;
-    }
-    .description {
-        white-space: pre-wrap;
-    }
-}
-
-.listInit {
-    list-style: none;
-}
-
-.editBtn {
-    background-color: palegoldenrod;
-    border: none;
-    margin-right: 12px;
-}
-
-.deleteBtn {
-    background-color: red;
-    border: none;
 }
