유저 아바타를 보여주는 헤더 추가

--- a/src/scss/Boards.module.scss
+++ b/src/scss/Boards.module.scss
@@ -8,8 +8,12 @@
             margin: 0;
         }
         .writeButton {
+            padding: 0.5rem 1rem;
+            background-color: #51557E;
             border: none;
-            padding: 0.5rem 2rem;
+            &:hover {
+                background-color: #51557E;
+            }
         }
     }
     .listInit {
