--- a/src/scss/Edit.module.scss
+++ b/src/scss/Edit.module.scss
@@ -1,12 +1,7 @@
-.detailContainer {
+.editContainer {
     padding: 60px;
-    .textMuted {
-        color: #A5A5A5;    
-    }
-    .description {
-        white-space: pre-wrap;
-    }
     .editBtn {
+        margin-top: 8px;
         padding: 0.5rem 1rem;
         background-color: #51557E;
         border: none;
