--- a/src/scss/Header.module.scss
+++ b/src/scss/Header.module.scss
@@ -1,10 +1,70 @@
 .headerContainer {
-    background-color: #F2EBE9;
-    padding: 0 60px;
+    background-color: white;
+    padding: 8px 60px;
     display: flex;
+    justify-content: space-between;
+    .backBtn {
+        background-color: transparent;
+        border: none;
+        svg {
+            stroke: #51557E;
+        }
+        &:hover {
+            background-color: transparent;
+        }
+    }
     .logoutBtn {
         padding: 0.5rem 1rem;
         background-color: #51557E;
         border: none;
+        &:hover {
+            background-color: #51557E;
+        }
+    }
+    .avatarPreview {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        object-fit: contain;
+        border-radius: 50%;
+        img {
+            width: 100%;
+            height: 100%;
+            max-height: auto;
+            border-radius: inherit;
+            object-fit: cover;
+        }
     }
 }
+
+.dropdownBtn {
+    width: 100%;
+    height: 50px;
+    padding: 0 16px;
+    line-height: 50px;
+    color: rgba(133, 136, 150, 0.5);
+    text-align: left;
+    border: 1px solid rgba(224, 226, 231, 0.75);
+    border-radius: 6px;
+    transition: border-color 100ms ease-in;
+}
+
+.dropdownMenu {
+    position: absolute;
+    z-index: 2;
+    top: calc(9%);
+    left: 0;
+    width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 6px;
+    transition: border-color 200ms ease-in, padding 200ms ease-in, max-height 200ms ease-in, box-shadow 200ms ease-in;
+      &.show {
+        padding: 8px 0;
+        max-height: 400px;
+        border-color: rgba(224, 226, 231, 0.5);
+        box-shadow: 0 4px 9px 0 rgba(63, 65, 80, 0.1);
+      }
+  }
