--- a/src/scss/Write.module.scss
+++ b/src/scss/Write.module.scss
@@ -1,3 +1,12 @@
 .writeContainer {
     padding: 60px;
+    .writeBtn {
+        margin-top: 8px;
+        padding: 0.5rem 1rem;
+        background-color: #51557E;
+        border: none;
+        &:hover {
+            background-color: #51557E;
+        }
+    }
 }
