회원가입, 로그인 후에 유저 정보 조회 추가 및 헤더 변경

--- a/src/scss/Header.module.scss
+++ b/src/scss/Header.module.scss
@@ -1,8 +1,7 @@
 .headerContainer {
     background-color: white;
     padding: 8px 60px;
-    display: flex;
-    justify-content: space-between;
+    margin-bottom: 0;
     .backBtn {
         background-color: transparent;
         border: none;
@@ -14,16 +13,18 @@
         }
     }
     .logoutBtn {
-        padding: 0.5rem 1rem;
-        background-color: #51557E;
+        padding: 0;
+        background-color: transparent;
         border: none;
+        color: #51557E;;
         &:hover {
-            background-color: #51557E;
+            color: #51557E;
+            background-color: transparent;
         }
     }
     .avatarPreview {
-        width: 100px;
-        height: 100px;
+        width: 30px;
+        height: 30px;
         background-color: red;
         object-fit: contain;
         border-radius: 50%;
@@ -33,6 +34,27 @@
             max-height: auto;
             border-radius: inherit;
             object-fit: cover;
+        }
+    }
+    .dropdownToggle {
+        display: inline-flex;
+        align-items: center;
+        color: #51557E;
+        background-color: white;
+        &:focus {
+            color: #51557E!important;
+            background-color: white!important;
+            box-shadow: none!important;
+        }
+        &:hover {
+            color: #51557E;
+            background-color: white;
+        }
+        &:after {
+            display: none;
+        }
+        span {
+            margin-left: 8px;
         }
     }
 }
