--- a/src/scss/Header.module.scss
+++ b/src/scss/Header.module.scss
@@ -2,6 +2,15 @@
     background-color: white;
     padding: 8px 60px;
     margin-bottom: 0;
+    .navBrand {
+        color: rgba(0, 0, 0, 0.9);
+        padding-top: 0.3125rem;
+        padding-bottom: 0.3125rem;
+        margin-right: 1rem;
+        font-size: 1.25rem;
+        text-decoration: none;
+        white-space: nowrap;
+    }
     .backBtn {
         background-color: transparent;
         border: none;
