--- a/src/scss/Info.module.scss
+++ b/src/scss/Info.module.scss
@@ -1,3 +1,40 @@
 .infoContainer {
-    padding: 60px;
+    margin-top: 60px;
+    .avatarFileGroup {
+        display: inline-flex;
+        align-items: center;
+        .avatarPreview {
+            width: 100px;
+            height: 100px;
+            background-image: url('../asset/images/avatar-1577909_960_720.png');
+            object-fit: contain;
+            border-radius: 50%;
+            max-height: auto;
+            img {
+                width: 100%;
+                height: 100%;
+                max-height: auto;
+                border-radius: inherit;
+                object-fit: cover;
+            }
+        }
+        .avatarInput {
+            width: 85px;
+            display: inline;
+            margin-left: 16px;
+            background-color: #51557E;
+            &:after {
+                background-color: red;
+            }
+        }
+    }
+    .editBtn {
+        margin-top: 16px;
+        padding: 0.5rem 1rem;
+        background-color: #51557E;
+        border: none;
+        &:hover {
+            background-color: #51557E;
+        }
+    }
 }
