--- a/src/scss/Register.module.scss
+++ b/src/scss/Register.module.scss
@@ -1,23 +1,31 @@
 .registerContainer {
-    padding: 60px;
-    .avatarPreview {
-        width: 100px;
-        height: 100px;
-        background-image: url('../asset/images/avatar-1577909_960_720.png');
-        object-fit: contain;
-        border-radius: 50%;
-        img {
-            width: 100%;
-            height: 100%;
+    margin-top: 60px;
+    .avatarFileGroup {
+        display: inline-flex;
+        align-items: center;
+        .avatarPreview {
+            width: 100px;
+            height: 100px;
+            background-image: url('../asset/images/avatar-1577909_960_720.png');
+            object-fit: contain;
+            border-radius: 50%;
             max-height: auto;
-            border-radius: inherit;
-            object-fit: cover;
+            img {
+                width: 100%;
+                height: 100%;
+                max-height: auto;
+                border-radius: inherit;
+                object-fit: cover;
+            }
         }
-    }
-    .avatarInput {
-        background-color: #51557E;
-        &:after {
-            background-color: red;
+        .avatarInput {
+            width: 85px;
+            display: inline;
+            margin-left: 16px;
+            background-color: #51557E;
+            &:after {
+                background-color: red;
+            }
         }
     }
     .registerBtn {
