--- a/src/scss/Info.module.scss
+++ b/src/scss/Info.module.scss
@@ -1,5 +1,9 @@
 .infoContainer {
     margin-top: 60px;
+    &Form {
+        padding: 40px!important;
+        background-color: white;
+    }
     .avatarFileGroup {
         display: inline-flex;
         align-items: center;
