--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -20,3 +20,11 @@ button {
     font-family: 'NEXONFootballGothicBA1';
     border: none!important;
 }
+
+.text-right {
+    text-align: right;
+}
+
+.text-center {
+    text-align: center;
+}
