--- a/src/scss/Detail.module.scss
+++ b/src/scss/Detail.module.scss
@@ -1,9 +1,35 @@
 .detailContainer {
-    padding: 60px;
+    margin: 60px 0;
+    .avatarPreview {
+        width: 40px;
+        height: 40px;
+        background-color: red;
+        object-fit: contain;
+        border-radius: 50%;
+        img {
+            width: 100%;
+            height: 100%;
+            max-height: auto;
+            border-radius: inherit;
+            object-fit: cover;
+        }
+    }
+    .userName {
+        color: #51557E;
+        font-size: 12px;
+        margin-top: 2px;
+    }
+    .userEmail {
+        color: #a2a5cd;
+        font-size: 12px;
+        margin-top: 2px;
+    }
     .textMuted {
+        font-size: 12px;
         color: #A5A5A5;    
     }
     .description {
+        margin-top: 20px;
         white-space: pre-wrap;
     }
     .editBtn {
