--- a/src/scss/Header.module.scss
+++ b/src/scss/Header.module.scss
@@ -1,6 +1,5 @@
 .headerContainer {
     background-color: white;
-    padding: 8px 60px;
     margin-bottom: 0;
     .navBrand {
         color: rgba(0, 0, 0, 0.9);
@@ -21,16 +20,6 @@
             background-color: transparent;
         }
     }
-    .logoutBtn {
-        padding: 0;
-        background-color: transparent;
-        border: none;
-        color: #51557E;;
-        &:hover {
-            color: #51557E;
-            background-color: transparent;
-        }
-    }
     .avatarPreview {
         width: 30px;
         height: 30px;
@@ -45,57 +34,45 @@
             object-fit: cover;
         }
     }
-    .dropdownToggle {
-        display: inline-flex;
-        align-items: center;
-        color: #51557E;
-        background-color: white;
-        &:focus {
-            color: #51557E!important;
-            background-color: white!important;
-            box-shadow: none!important;
-        }
-        &:hover {
+    .dropdown {
+        &Toggle {
+            display: inline-flex;
+            align-items: center;
             color: #51557E;
             background-color: white;
+            &:focus {
+                color: #51557E!important;
+                background-color: white!important;
+                box-shadow: none!important;
+            }
+            &:hover {
+                color: #51557E;
+                background-color: white;
+            }
+            &:after {
+                display: none;
+            }
+            span {
+                margin-left: 8px;
+            }
         }
-        &:after {
-            display: none;
-        }
-        span {
-            margin-left: 8px;
+        &Menu {
+            a {
+                display: block;
+                text-decoration: none;
+                color: rgb(57, 57, 57);
+                margin-bottom: 4px;
+            }
+            .logoutBtn {
+                padding: 0;
+                background-color: transparent;
+                border: none;
+                color: #51557E;;
+                &:hover {
+                    color: #51557E;
+                    background-color: transparent;
+                }
+            }
         }
     }
 }
-
-.dropdownBtn {
-    width: 100%;
-    height: 50px;
-    padding: 0 16px;
-    line-height: 50px;
-    color: rgba(133, 136, 150, 0.5);
-    text-align: left;
-    border: 1px solid rgba(224, 226, 231, 0.75);
-    border-radius: 6px;
-    transition: border-color 100ms ease-in;
-}
-
-.dropdownMenu {
-    position: absolute;
-    z-index: 2;
-    top: calc(9%);
-    left: 0;
-    width: 100%;
-    max-height: 100%;
-    overflow: hidden;
-    background-color: #fff;
-    border: 1px solid transparent;
-    border-radius: 6px;
-    transition: border-color 200ms ease-in, padding 200ms ease-in, max-height 200ms ease-in, box-shadow 200ms ease-in;
-      &.show {
-        padding: 8px 0;
-        max-height: 400px;
-        border-color: rgba(224, 226, 231, 0.5);
-        box-shadow: 0 4px 9px 0 rgba(63, 65, 80, 0.1);
-      }
-  }
