404 페이지 추가

--- a/src/scss/Comments.module.scss
+++ b/src/scss/Comments.module.scss
@@ -62,4 +62,9 @@
             box-shadow: none!important;
         }
     }
+    .replyCard {
+        margin-bottom: 8px;
+        border: none;
+        padding: 16px 12px 12px 20px;
+    }
 }
