--- a/src/scss/Header.module.scss
+++ b/src/scss/Header.module.scss
@@ -65,6 +65,8 @@
             }
         }
         &Menu {
+            left: unset!important;
+            right: 0;
             a {
                 display: block;
                 text-decoration: none;
