--- a/src/scss/Detail.module.scss
+++ b/src/scss/Detail.module.scss
@@ -3,7 +3,7 @@
     .avatarPreview {
         width: 40px;
         height: 40px;
-        background-color: red;
+        background-color: transparent;
         object-fit: contain;
         border-radius: 50%;
         img {
@@ -13,6 +13,13 @@
             border-radius: inherit;
             object-fit: cover;
         }
+    }
+    .avatarDefault {
+        width: 40px;
+        height: 40px;
+        background-color: #51557E;
+        object-fit: contain;
+        border-radius: 50%;
     }
     .userName {
         color: #51557E;
