--- a/src/scss/Boards.module.scss
+++ b/src/scss/Boards.module.scss
@@ -35,7 +35,7 @@
             .avatarPreview {
                 width: 40px;
                 height: 40px;
-                background-color: red;
+                background-color: transparent;
                 object-fit: contain;
                 border-radius: 50%;
                 img {
@@ -45,6 +45,13 @@
                     border-radius: inherit;
                     object-fit: cover;
                 }
+            }
+            .avatarDefault {
+                width: 40px;
+                height: 40px;
+                background-color: #51557E;
+                object-fit: contain;
+                border-radius: 50%;
             }
             h2 {
                 cursor: pointer;
