--- a/src/scss/Info.module.scss
+++ b/src/scss/Info.module.scss
@@ -10,8 +10,8 @@
         .avatarPreview {
             width: 100px;
             height: 100px;
-            background-image: url('../asset/images/avatar-1577909_960_720.png');
-            object-fit: contain;
+            background: no-repeat center url('../asset/images/avatar-1577909_960_720.png');
+            background-size: contain;
             border-radius: 50%;
             max-height: auto;
             img {
