--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -7,6 +7,17 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'HallymGothic-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2204@1.0/HallymGothic-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+}
+
+* {
+    font-family: 'HallymGothic-Regular';
+}
+
 body {
     background-color: #F2EBE9;
 }
