--- a/src/scss/Header.module.scss
+++ b/src/scss/Header.module.scss
@@ -9,6 +9,7 @@
         font-size: 1.25rem;
         text-decoration: none;
         white-space: nowrap;
+        font-family: 'NEXONFootballGothicBA1';
     }
     .backBtn {
         background-color: transparent;
