--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -20,6 +20,7 @@
 
 body {
     background-color: #F2EBE9;
+    min-height: 100vh;
 }
 
 h1 {
@@ -30,6 +31,10 @@ h1 {
 button {
     font-family: 'NEXONFootballGothicBA1';
     border: none!important;
+}
+
+.main-container {
+    // padding: 60px;
 }
 
 .text-right {
