글쓰기 페이지 스타일 수정 및 글쓰기  로직 변경

--- a/src/scss/Boards.module.scss
+++ b/src/scss/Boards.module.scss
@@ -14,6 +14,10 @@
             &:hover {
                 background-color: #51557E;
             }
+            &:focus {
+                box-shadow: none!important;
+                background-color: #51557E;
+            }
         }
     }
     .listInit {
