--- a/src/scss/Header.module.scss
+++ b/src/scss/Header.module.scss
@@ -16,6 +16,7 @@
         border: none;
         svg {
             stroke: #51557E;
+            vertical-align: unset;
         }
         &:hover {
             background-color: transparent;
