--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -44,3 +44,11 @@ button {
 .text-center {
     text-align: center;
 }
+
+.form-container {
+    align-self: center;
+    background-color: white;
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 10px 5px 20px 5px rgba(0,0,0,0.01);
+}
