--- a/src/scss/Detail.module.scss
+++ b/src/scss/Detail.module.scss
@@ -1,39 +1,46 @@
 .detailContainer {
     margin: 60px 0;
-    .avatarPreview {
-        width: 40px;
-        height: 40px;
-        background-color: transparent;
-        object-fit: contain;
-        border-radius: 50%;
-        img {
-            width: 100%;
-            height: 100%;
-            max-height: auto;
-            border-radius: inherit;
-            object-fit: cover;
+    .userInfoColumn {
+        display: flex;
+        margin-top: 16px;
+        .avatarPreview {
+            display: inline-flex;
+            width: 40px;
+            height: 40px;
+            background-color: transparent;
+            object-fit: contain;
+            border-radius: 50%;
+            margin-right: 12px;
+            img {
+                width: 100%;
+                height: 100%;
+                max-height: auto;
+                border-radius: inherit;
+                object-fit: cover;
+            }
         }
-    }
-    .avatarDefault {
-        width: 40px;
-        height: 40px;
-        background-color: #51557E;
-        object-fit: contain;
-        border-radius: 50%;
-    }
-    .userName {
-        color: #51557E;
-        font-size: 12px;
-        margin-top: 2px;
-    }
-    .userEmail {
-        color: #a2a5cd;
-        font-size: 12px;
-        margin-top: 2px;
-    }
-    .textMuted {
-        font-size: 12px;
-        color: #A5A5A5;    
+        .avatarDefault {
+            display: inline-flex;
+            width: 40px;
+            height: 40px;
+            background-color: #51557E;
+            object-fit: contain;
+            border-radius: 50%;
+        }
+        .userInfo {
+            align-self: center;
+            color: #51557E;
+            font-size: 12px;
+            .userEmail {
+                color: #a2a5cd;
+                font-size: 12px;
+            }
+            .postDate {
+                color: #a5a5a5;
+                font-size: 12px;
+                margin: 0;
+            }
+        }
     }
     .description {
         margin-top: 20px;
