--- a/src/scss/Detail.module.scss
+++ b/src/scss/Detail.module.scss
@@ -26,6 +26,7 @@
             background-color: #51557E;
             object-fit: contain;
             border-radius: 50%;
+            margin-right: 12px;
         }
         .userInfo {
             align-self: center;
