--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -33,6 +33,24 @@ button {
     border: none!important;
 }
 
+label {
+    font-weight: bold;
+    margin-bottom: 0.3rem;
+}
+
+input, textarea {
+    border: 1px solid #e9e9e9;
+    border-radius: 5px;
+    padding: 0.4rem 0.8rem;
+}
+
+ul,
+li {
+  list-style-type: none;
+  padding-left: 0;
+  margin-left: 0;
+}
+
 .main-container {
     // padding: 60px;
 }
