--- a/src/scss/Boards.module.scss
+++ b/src/scss/Boards.module.scss
@@ -12,85 +12,81 @@
             background-color: #51557E;
         }
     }
-    .listInit {
-        list-style: none;
-        padding-left: 0;
-        li {
-            &:first-child {
-                margin-top: 40px;
+    li {
+        &:first-child {
+            margin-top: 40px;
+        }
+    }
+    .card {
+        background-color: white;
+        box-shadow: 10px 5px 20px 5px rgba(0,0,0,0.01);
+        border-radius: 12px;
+        padding: 16px 24px 1px 24px;
+        margin-bottom: 8px;
+        .avatarColumn {
+            display: flex;
+            .avatarPreview {
+                display: inline-flex;
+                width: 40px;
+                height: 40px;
+                background-color: transparent;
+                object-fit: contain;
+                border-radius: 50%;
+                margin-right: 12px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    max-height: auto;
+                    border-radius: inherit;
+                    object-fit: cover;
+                }
+            }
+            .avatarDefault {
+                display: inline-flex;
+                width: 40px;
+                height: 40px;
+                background-color: #51557E;
+                object-fit: contain;
+                border-radius: 50%;
             }
         }
-        .card {
-            background-color: white;
-            box-shadow: 10px 5px 20px 5px rgba(0,0,0,0.01);
-            border-radius: 12px;
-            padding: 24px 24px 12px 24px;
-            margin: 4px 0;
-            .avatarColumn {
-                display: flex;
-                .avatarPreview {
-                    display: inline-flex;
-                    width: 40px;
-                    height: 40px;
-                    background-color: transparent;
-                    object-fit: contain;
-                    border-radius: 50%;
-                    margin-right: 12px;
-                    img {
-                        width: 100%;
-                        height: 100%;
-                        max-height: auto;
-                        border-radius: inherit;
-                        object-fit: cover;
-                    }
-                }
-                .avatarDefault {
-                    display: inline-flex;
-                    width: 40px;
-                    height: 40px;
-                    background-color: #51557E;
-                    object-fit: contain;
-                    border-radius: 50%;
-                }
-            }
-            h4 {
-                cursor: pointer;
-            }
-            .userInfo {
-                align-self: center;
-                color: #51557E;
+        h4 {
+            cursor: pointer;
+        }
+        .userInfo {
+            align-self: center;
+            color: #51557E;
+            font-size: 12px;
+            .userEmail {
+                color: #a2a5cd;
                 font-size: 12px;
-                .userEmail {
-                    color: #a2a5cd;
-                    font-size: 12px;
-                }
-                .postDate {
-                    color: #a5a5a5;
-                    font-size: 12px;
-                    margin: 0;
-                }
             }
-            .description {
-                margin-top: 20px;
-                overflow: hidden;
-                white-space: pre-wrap;
-                text-overflow: ellipsis;
-                display: -webkit-box;
-                -webkit-line-clamp: 2;
-                -webkit-box-orient: vertical;
-                word-break: keep-all;   // 문단으로 끊어져서 줄바꿈 됨
+            .postDate {
+                color: #a5a5a5;
+                font-size: 12px;
+                margin: 0;
             }
-            .deleteBtn {
-                padding: 0; 
+        }
+        .description {
+            margin-top: 20px;
+            overflow: hidden;
+            white-space: pre-wrap;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            word-break: keep-all;   // 문단으로 끊어져서 줄바꿈 됨
+        }
+        .deleteBtn {
+            padding: 0; 
+            background-color: transparent;
+            border: none;
+            &:hover {
                 background-color: transparent;
-                border: none;
-                &:hover {
-                    background-color: transparent;
-                }
-                &:focus {
-                    box-shadow: none!important;
-                    background-color: transparent;
-                }
+            }
+            &:focus {
+                box-shadow: none!important;
+                background-color: transparent;
             }
         }
     }
