--- a/src/scss/Header.module.scss
+++ b/src/scss/Header.module.scss
@@ -13,6 +13,7 @@
     }
     .backBtn {
         background-color: transparent;
+        padding-left: 0;
         border: none;
         svg {
             stroke: #51557E;
@@ -61,6 +62,9 @@
                 color: #51557E!important;
                 background-color: white!important;
                 box-shadow: none!important;
+            }
+            &:active {
+                background-color: white!important;
             }
             &:hover {
                 color: #51557E;
