--- a/src/scss/Info.module.scss
+++ b/src/scss/Info.module.scss
@@ -1,15 +1,31 @@
 .infoContainer {
-    margin-top: 60px;
-    &Form {
-        padding: 40px!important;
+    .infoRow {
+        padding: 0 1rem;
+        justify-content: center;
+        min-height: 100vh;
+    }
+    .formContainer {
+        align-self: center;
         background-color: white;
+        padding: 40px;
+        border-radius: 12px;
+        box-shadow: 10px 5px 20px 5px rgba(0,0,0,0.01);
+    }
+    &Form {
+        input {
+            width: 100%;
+        }
+        small {
+            color: #6c757d;
+            font-size: 10px;
+        }
     }
     .avatarFileGroup {
         display: inline-flex;
         align-items: center;
         .avatarPreview {
-            width: 100px;
-            height: 100px;
+            width: 80px;
+            height: 80px;
             background: no-repeat center url('../asset/images/avatar-1577909_960_720.png');
             background-size: contain;
             border-radius: 50%;
@@ -23,9 +39,9 @@
             }
         }
         .avatarInput {
-            width: 85px;
+            width: 90px;
             display: inline;
-            margin-left: 16px;
+            margin: 20px 0 0 16px;
             background-color: #51557E;
             &:after {
                 background-color: red;
@@ -33,11 +49,16 @@
         }
     }
     .editBtn {
-        margin-top: 16px;
-        padding: 0.5rem 1rem;
+        width: 100%;
+        padding: 0.5rem 2rem;
+        margin-top: 32px;
         background-color: #51557E;
         border: none;
         &:hover {
+            background-color: #51557E;
+        }
+        &:focus {
+            box-shadow: none!important;
             background-color: #51557E;
         }
     }
