--- a/src/scss/Comments.module.scss
+++ b/src/scss/Comments.module.scss
@@ -9,7 +9,7 @@
         // background-color: white;
         border-radius: 12px;
         padding: 4 0px;
-        margin-bottom: 16px;
+        margin: 16px 0;
         .commentForm {
             all: unset;
             width: 100%;
