--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -52,7 +52,8 @@ li {
 }
 
 .main-container {
-    // padding: 60px;
+    margin-top: 60px;
+    min-height: calc(100vh - 193px);
 }
 
 .text-right {
@@ -61,6 +62,10 @@ li {
 
 .text-center {
     text-align: center;
+}
+
+.vertical-align-middle {
+    vertical-align: middle;
 }
 
 .form-container {
