--- a/src/scss/layout/Footer.module.scss
+++ b/src/scss/layout/Footer.module.scss
@@ -1,7 +1,7 @@
 .footerContainer {
     background-color: #f8f9fa;
     padding: 20px 0;
-    margin-top: 50px;
+    // margin-top: 50px;
     .navBrand {
         color: rgba(0, 0, 0, 0.9);
         font-size: 1.25rem;
