--- a/src/scss/Boards.module.scss
+++ b/src/scss/Boards.module.scss
@@ -47,6 +47,7 @@
                 background-color: #51557E;
                 object-fit: contain;
                 border-radius: 50%;
+                margin-right: 12px;
             }
         }
         h5 {
