--- a/src/scss/ui/UserDropdown.module.scss
+++ b/src/scss/ui/UserDropdown.module.scss
@@ -82,6 +82,7 @@
         }
     }
     .avatarDefault {
+        display: inline-flex;
         width: 30px;
         height: 30px;
         background-color: #51557E;
