회원가입 Validation, 댓글 삭제 기능 추가

--- a/src/scss/Comments.module.scss
+++ b/src/scss/Comments.module.scss
@@ -119,6 +119,16 @@
                 }
             }
         }
+        .commentDeleteBtn {
+            padding: 0 8px 0 0;
+            border: none;
+            text-align: right;
+            background-color: transparent;
+            &:focus {
+                box-shadow: none!important;
+                background-color: transparent;
+            }
+        }
     }
     .replyBtn {
         background-color: transparent;
