--- a/src/scss/layout/Header.module.scss
+++ b/src/scss/layout/Header.module.scss
@@ -17,7 +17,7 @@
         border: none;
         svg {
             stroke: #51557E;
-            vertical-align: unset;
+            vertical-align: -2px;
         }
         &:hover {
             background-color: transparent;
