--- a/src/scss/Comments.module.scss
+++ b/src/scss/Comments.module.scss
@@ -154,4 +154,12 @@
         border: none;
         padding: 16px 12px 12px 20px;
     }
+    .noContent {
+        text-align: center;
+        padding-top: 20px;
+        h5 {
+            font-family: 'NEXONFootballGothicBA1';
+            color: #51557E;
+        }
+    }
 }
