--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -42,6 +42,9 @@ input, textarea {
     border: 1px solid #e9e9e9;
     border-radius: 5px;
     padding: 0.4rem 0.8rem;
+    &::placeholder {
+        font-size: 14px;
+    }
 }
 
 ul,
@@ -49,6 +52,15 @@ li {
   list-style-type: none;
   padding-left: 0;
   margin-left: 0;
+}
+
+.start {
+    opacity: 0;
+}
+
+.end {
+    opacity: 1;
+    transition : opacity 500ms;
 }
 
 .main-container {
