--- a/src/scss/Boards.module.scss
+++ b/src/scss/Boards.module.scss
@@ -6,9 +6,32 @@
     &:focus {
         box-shadow: none;
     }
-  }
+}
+
+@mixin ellipse($paragraphNumber) {
+    overflow: hidden;
+    white-space: pre-wrap;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: $paragraphNumber;
+    -webkit-box-orient: vertical;
+    word-break: keep-all;   // 문단으로 끊어져서 줄바꿈 됨
+}
+
+.start {
+    opacity: 0;
+}
+
+.end {
+    opacity: 1;
+    transition : opacity 500ms;
+}
 
 .boardContainer {
+    padding-bottom: 32px;
+    .listContainer {
+        min-height: 556px;
+    }
     .writeBtn {
         padding: 0.5rem 1rem;
         background-color: #51557E;
@@ -19,6 +42,10 @@
         &:focus {
             box-shadow: none!important;
             background-color: #51557E;
+        }
+        &:active {
+            transform: scale(0.95);
+            transition: all 100ms;
         }
     }
     .orderBtnContainer {
@@ -38,10 +65,11 @@
         }
     }
     .card {
+        min-height: 180px;
         background-color: white;
         box-shadow: 10px 5px 20px 5px rgba(0,0,0,0.01);
         border-radius: 12px;
-        padding: 16px 24px 1px 24px;
+        padding: 20px 24px 1px 24px;
         margin-bottom: 8px;
         .avatarColumn {
             display: flex;
@@ -88,15 +116,12 @@
                 margin: 0;
             }
         }
+        .title {
+            @include ellipse(2)
+        }
         .description {
             margin-top: 20px;
-            overflow: hidden;
-            white-space: pre-wrap;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            word-break: keep-all;   // 문단으로 끊어져서 줄바꿈 됨
+            @include ellipse(1)
         }
         .deleteBtn {
             padding: 0; 
