--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -56,11 +56,13 @@ li {
 
 .start {
     opacity: 0;
+    transform: scale(0.9);
 }
 
 .end {
     opacity: 1;
-    transition : opacity 500ms;
+    transform: scale(1);
+    transition : all 500ms;
 }
 
 .main-container {
