--- a/src/scss/ui/Pagination.module.scss
+++ b/src/scss/ui/Pagination.module.scss
@@ -24,6 +24,7 @@
         }
         &:active {
             transform: scale(0.85);
+            transition: all 300ms;
         }
     }
     &NavBtn {
