--- a/src/scss/Boards.module.scss
+++ b/src/scss/Boards.module.scss
@@ -53,7 +53,7 @@
         }
     }
     .card {
-        min-height: 180px;
+        // min-height: 180px;
         background-color: white;
         box-shadow: 10px 5px 20px 5px rgba(0,0,0,0.01);
         border-radius: 12px;
@@ -105,11 +105,12 @@
             }
         }
         .title {
-            @include ellipse(2)
+            @include ellipse(2);
         }
         .description {
             margin-top: 20px;
-            @include ellipse(1)
+            font-size: 13px;
+            @include ellipse(1);
         }
         .deleteBtn {
             padding: 0; 
