좋아요 관련 ui, 페이지, 바인딩 완료

--- a/src/scss/Detail.module.scss
+++ b/src/scss/Detail.module.scss
@@ -47,6 +47,7 @@
                 }
             }
             &Right {
+                align-self: center;
                 button {
                     margin-left: 15px;
                     &.editBtn {
@@ -66,15 +67,25 @@
                         }
                     }
                     &.likeBtn {
-                        padding: 0.5rem 1rem;
+                        box-sizing: border-box;
+                        -moz-box-sizing: border-box;
+                        -webkit-box-sizing: border-box;
+                        padding: 0.438rem 1rem;
+                        border-radius: 0.25rem;
                         background-color: transparent;
+                        border: none;
+                        box-shadow: 0px 0px 0px 1px #51557E inset;
                         &:active {
                             transform: scale(0.8);
                             transition: all 100ms;
                         }
+                        span {
+                            margin-left: 6px;
+                            font-size: 13px;
+                        }                   
                         &.clicked {
                             svg {
-                                fill: #355b8c;
+                                fill: #51557E;
                             }
                         }
                     }
