크롬 페이지네이션 깨짐 테스트

--- a/src/scss/ui/Pagination.module.scss
+++ b/src/scss/ui/Pagination.module.scss
@@ -9,6 +9,8 @@
         button {
             margin: 0 4px;
             border-radius: 50%;
+            -moz-border-raius: 50%;
+            -webkit-border-radius: 50%;
             width: 32px;
             height: 32px;
         }
