페이지네이션 버튼 깨짐, 좋아요 버튼 텍스트 컬러 수정

--- a/src/scss/Detail.module.scss
+++ b/src/scss/Detail.module.scss
@@ -80,6 +80,7 @@
                             transition: all 100ms;
                         }
                         span {
+                            color: #51557E;
                             margin-left: 6px;
                             font-size: 13px;
                         }                   
