--- a/src/scss/ui/Pagination.module.scss
+++ b/src/scss/ui/Pagination.module.scss
@@ -13,6 +13,14 @@
             -webkit-border-radius: 50%;
             width: 32px;
             height: 32px;
+            position: relative;
+            span {
+                font-family: 'NEXONFootballGothicBA1';
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+            }
         }
     }
     &PageBtn {
