--- a/src/scss/ui/Pagination.module.scss
+++ b/src/scss/ui/Pagination.module.scss
@@ -1,3 +1,22 @@
+@mixin buttons-shape {
+    margin: 0 4px;
+    padding: 15px;
+    border-radius: 50%;
+    -moz-border-raius: 50%;
+    -webkit-border-radius: 50%;
+    // width: 32px;
+    // height: 32px;
+    position: relative;   
+}
+
+@mixin button-text {
+    font-family: 'NEXONFootballGothicBA1';
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .pagination {
     padding: 24px 0!important;
     &Row {
@@ -6,24 +25,9 @@
     &Col {
         text-align: center;
         padding: 0!important;
-        button {
-            margin: 0 4px;
-            border-radius: 50%;
-            -moz-border-raius: 50%;
-            -webkit-border-radius: 50%;
-            width: 32px;
-            height: 32px;
-            position: relative;
-            span {
-                font-family: 'NEXONFootballGothicBA1';
-                position: absolute;
-                left: 50%;
-                top: 50%;
-                transform: translate(-50%, -50%);
-            }
-        }
     }
     &PageBtn {
+        @include buttons-shape;
         background-color: white;
         color: #51557E;
         border: solid 1px #d6d7e8!important;
@@ -36,15 +40,19 @@
             transform: scale(0.85);
             transition: all 300ms;
         }
+        span {
+            @include button-text;
+        }
     }
     &NavBtn {
+        @include buttons-shape;
         background-color: transparent;
         color: #51557E;
         &:first-child {
-            margin-right: 16px;
+            margin-right: 12px;
         }
         &:last-child {
-            margin-left: 16px;
+            margin-left: 12px;
         }
         &:active {
             transform: scale(0.85);
@@ -53,6 +61,9 @@
             cursor: not-allowed;
             transform: unset;
             opacity: .5;
+        }
+        span {
+            @include button-text;
         }
     }
 }
